dts/testData/inspections/container/NodeDeleteNodeByRef.dts
/ {
    <error descr="Not a valid node entry">/delete-node/</error> &label;
};